Task4/terraform/ec2/main.tf
data "terraform_remote_state" "vpc"{
    backend = "local"

    config = {
      path = "../vpc/terraform.tfstate"
    }
}

resource "aws_security_group" "network-security-group"{
    vpc_id = data.terraform_remote_state.vpc.outputs.vpc
    name = var.nsg-name
    description = "All tls inbound rule"

    ingress {
        description = "Strapi-port"
        from_port = 1337
        to_port = 1337
        protocol = "tcp"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    ingress {
        description = "SSH"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = [ "0.0.0.0/0" ]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
      Name = "strapi_inbound"
    }
}

resource "aws_key_pair" "deployer" {
  key_name   = var.key-name
  public_key = file(var.key-path)
}

resource "aws_instance" "strapi_ec2" {
  ami                    = var.ami
  instance_type          = var.instance-type
  subnet_id              = data.terraform_remote_state.vpc.outputs.subnet
  vpc_security_group_ids = [aws_security_group.network-security-group.id]
  key_name               = aws_key_pair.deployer.key_name
  associate_public_ip_address = true


  tags = {
    Name = "strapi_vm"
  }
}
